# simian-council-lib

./: Cargo.toml  README.md
src/: lib.rs  pokemon_generator.rs  resources.rs  secret_generator.rs  utils.rs
src/secret_generator/: dictionary_entry.rs
src/utils/: file_interactor.rs
